packages/core/src/components/pill/pill.scss
/*
 * SPDX-FileCopyrightText: 2022 Siemens AG
 *
 * SPDX-License-Identifier: MIT
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

@import './../chip/chip-mixin';
@import 'common-variables';
@import 'mixins/text-truncation';

$border-radius: 100px;
$chip-height: 1.25rem;

:host {
  display: inline-flex;
  position: relative;
  align-items: center;
  justify-content: center;

  border-radius: $border-radius;
  padding: 0px 6px;
  margin-left: 0.25rem;
  min-width: $large-space;
  height: $chip-height;
  min-height: $chip-height;
  max-height: $chip-height;
  cursor: auto;

  .with-icon {
    margin-right: $tiny-space;
  }

  &.align-left {
    justify-content: flex-start;
  }

  @include chip($interaction: false);

  .slot {
    @include ellipsis;
  }
}

